2006-03-15  Alex Roitman  <shura@gramps-project.org>
	* various: intltoolize and gettextize properly.

2006-03-14  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (update_empty,update_real): Add
	functions for updating the display;
	(gramps_upgrade): Set up display updaters;
	(gramps_upgrade_9): Reflect progess of db upgrade.
	(low_level_9): Return status and length of the db.
	(_table_low_level_9): Return table length if successful.
	* src/ViewManager.py (post_load): Remove database upgrade, since
	db.load takes care of upgrade.

2006-03-13  Alex Roitman  <shura@gramps-project.org>
	* src/RelLib/_NoteBase.py (NoteBase.serialize): Work out the case
	of note being None -- leftover from gramps20.

2006-03-11  Alex Roitman  <shura@gramps-project.org>
	* src/PluginUtils/_ReportOptions.py: Use correct namespace for the
	base clases from _Options module.

2006-03-10  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_MapView.py: try to avoid startup traceback

2006-03-10  Alex Roitman  <shura@gramps-project.org>
	* src/Plugins.py, src/PluginMgr.py: Move to ReportUtils.
	* various: use ReportUtils instead of PluginMgr.
	* DateHandler/_DateHandler.py: Rename __init__; remove dependency
	on load_plugins.
	* DateHandler/__init__.py: Add new file.

2006-03-10  Don Allingham  <don@gramps-project.org>
	* src/Mime/PythonMime.py: import gtk
	* src/DataViews/_FamilyList.py: family_add explict function added,
	remove family functionality
	* src/GrampsWidgets.py: use STOCK_DIALOG_INFO as a fallback if
	STOCK_INFO does not exist (FreeBSD?)

2006-03-09  Don Allingham  <don@gramps-project.org>
	* src/AddMedia.py: avoid double commit
	* src/GrampsDb/_GrampsDbBase.py: fix add of places in internal map
	* src/Editors/_EditEventRef.py: commit place properly
	* src/DataViews/_FamilyView.py: avoid reentry
	* src/DataViews/_PedigreeView.py: handle PluginUtils
	* src/DataViews/_PersonView.py: handle remove person better